--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,3 +1,3 @@
 <!-- your html code here -->
 <p>Hello, I'm the first_heading.html</p>
-<p>TEST MAYBE MERGE</p>
+<p>From other branch called ayats</p>
